--- a/Style/style.css
+++ b/Style/style.css
@@ -8,9 +8,12 @@ body {
 	box-sizing: border-box;
 	font-family: -apple-system, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
 		Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	width:100%;
+	overflow-x:hidden;
+
 }
 .mainSection {
-	width: 97%;
+	width: 100%;
 }
 .header {
 	border-top: 3px solid hsl(27, 90%, 50%);
@@ -19,7 +22,7 @@ body {
 }
 
 .stackLogo {
-	padding:11px 11px 0px 7px;
+	padding:11px 7px 0px 0px;
 	cursor: pointer;
 }
 .stackLogo:hover {
@@ -77,11 +80,11 @@ body {
 }
 .searchIcon {
 	color: black;
-	margin:0px 1px 0px 4px;
+	/*margin:0px 1px 0px 4px;*/
 	padding: 5px;
 }
 .headerEnd {
-	gap: 10px;
+	gap: 4px;
 	cursor: pointer;
 }
 .login {
@@ -90,11 +93,11 @@ body {
 	border-radius: 5px;
 	color: #1B75D0;
 	border: 1px solid #1b75d0;
-	width: 50px;
+	width: 65px;
 }
 .login p {
 	margin-top: 0px;
-	padding-left: 7px;
+	padding-left: 13px;
 }
 .login:hover {
 	background-color: hsl(206, 96%, 90%);
@@ -113,7 +116,7 @@ body {
 	padding-right:3px;
 }
 .signup:hover {
-	background-color: hsl(210, 80%, 23%);
+	background-color: hsl(210, 77%, 36%);
 
 }
 .headerLeftIcons {
@@ -173,6 +176,9 @@ body {
 .tagsTxt:hover {
 	color: hsl(210, 8%, 5%);
 }
+.headerLeftIcons{
+	overflow:scroll;
+}
 .headerLeftSecond {
 	margin-left: 35px;
 	font-size: 13px;
@@ -181,7 +187,7 @@ body {
 }
 .usersSection {
 	gap: 7px;
-	width: 89%;
+	width: 97%;
 	height: 25px;
 	bordr-radius: 5px;
 	background-color: hsl(0, 0%, 95%);
@@ -345,6 +351,7 @@ body {
 	height: 35.03px;
 	padding-left: 10px;
 	border-radius: 7px;
+	background-color:hsl(210, 8%, 98%);
 }
 .profileButton span {
 	position: relative;
@@ -369,11 +376,15 @@ body {
 }
 .activityBtn {
 	font-size: 13px;
-	padding: 5px 10px;
-	height: 21px;
+	/*padding: 5px 10px;
+	height: 21px;*/
 	border-radius: 21px;
 	margin-top: 10px;
 	cursor: pointer;
+	padding-left:10px;
+	padding-right:10px;
+	padding-top:5px;
+	padding-bottom:5px;
 }
 .activityBtn:hover {
 	background-color: hsl(0, 0%, 84%);
@@ -513,7 +524,6 @@ body {
 	color: #3B4045;
 	font-size: 15px;
 }
-
 .authorTxt a {
 	color: #1B75D0;
 }
@@ -557,20 +567,19 @@ body {
 	padding-top: 8px;
 	color: #3B4045;
 }
-.readBtn {
-	margin-top: 14px;
-	border: 1px solid #ddd;
-	height: 18px;
-	border-radius: 5px;
-	cursor: pointer;
-	width: 70px;
-	height: 28px;
-	cursor: pointer;
-	padding:3px 0px 5px 7px;
+.blue-underline{
+	color:#1B75D0;
+	text-decoration:underline;
+	cursor:pointer;
 }
-.readTxt {
-	font-size: 11px;
-	color: #3b4045;
+.blue-underline:hover{
+	color: hsl(210, 77%, 36%);
+}
+#myButton{
+	border: 1px solid #ddd;
+    	padding: 3px 6px 5px 8px;
+    	font-size: 11px;
+    	border-radius: 4px;
 }
 .dot {
     height: 6.5px;
@@ -584,13 +593,15 @@ body {
     border-radius: 6px;
     color: #525960;
     background-color: #f1f2f3;
+    cursor:pointer;
 }
-
+.iconTitle:hover{
+	background-color:hsl(210, 8%, 90%);
+}
 .badgesDate {
     color: hsl(210, 8%, 25%);
     font-size: 11px;
 }
-
 .tag-dot {
     background-color: #FFD700;
     margin: 10px 6px 6px 7px;
@@ -602,7 +613,9 @@ body {
 .ThirdMainRightPart {
 	margin-top: 20px;
 }
-
+.numTxtSecond{
+	cursor:pointer;
+}
 .topTagsTxt h3 {
 	font-size: 21px;
 	color: #0c0d0e;
@@ -618,7 +631,6 @@ body {
 .viewallTags:hover {
 	color: hsl(210, 8%, 25%);
 }
-
 .firstBox {
 	border: 1px solid #ddd;
 	border-radius: 5px;
@@ -674,7 +686,6 @@ body {
 	color: #636B74;
 }
 .cHash {
-	
 	border: 1px solid black;
 	border-radius: 5px;
 	border-style: none;
@@ -692,7 +703,6 @@ body {
 	padding: 13px;
 }
 .java {
-	
 	border: 1px solid black;
 	font-size: 13px;
 	border-radius: 5px;
@@ -794,7 +804,6 @@ body {
 .boxContents {
 	margin-top: 11px;
 }
-
 .boxFirst {
 	gap: 10px;
 	font-size: 11px;
@@ -812,27 +821,21 @@ body {
 .allTxt {
 	padding-left: 9px;
 }
-
 .quesBox {
-	padding-top: 5px;
-	padding-right: 5px;
+	border-right:1px solid #ddd;
+	padding:5px 5px 0px 0px;
 	
 }
-
 .ansBox {
 	padding-top: 6px;
-	
+	border-right:1px solid #ddd;
 	width: 51px
 }
-
 .artBox {
 	padding-top: 6px;
 	width: 47px;
-
 }
-
 .boxSecond {
-	
 	gap: 5px;
 	font-size: 11px;
 	border: 1px solid #ddd;
@@ -841,54 +844,36 @@ body {
 	margin-left: 11px;
 	cursor: pointer;
 }
-
 .scoreBox {
-	
 	width: 39px;
 	padding-top: 5px;
 	background-color: hsl(210, 8%, 90%);
 }
-
 .scoreTxt {
 	padding-left: 9px;
 }
-
 .newestBox {
-	padding-top: 5px;
-	padding-right: 5px;
+	padding:5px 5px 0px 0px;
 	
 }
-
 .secondMainBox {
 	border: 1px solid #ddd;
-	
 	border-radius: 5px;
-	
 	margin-top: 13px;
-
 }
-
 .secondMainBoxInside {
-	
 	border-bottom: 1px solid #ddd;
-	
 	padding: 13px;
 }
-
-
-
 .numSet {
 	border: 1px solid #ddd;
 	border-radius: 3px;
-	padding-left: 2px;
-	padding-right: 3px;
-	padding-top: 3px;
-	padding-bottom: 5px;
 	font-size: 13px;
 	background-color: hsl(148, 70%, 31%);
 	border-style: none;
 	color: white;
 	margin-bottom: 5px;
+	padding:3px 3px 5px 2px;
 }
 
 .numSetThird {
@@ -896,273 +881,179 @@ body {
 	border: 1px solid #ddd;
 	color: #0C0D0E;
 	border-radius: 3px;
-	padding-left: 4px;
-	padding-right: 5px;
-	padding-top: 3px;
-	padding-bottom: 5px;
 	font-size: 13px;
 	margin-bottom: 5px;
-
-
+	padding:3px 5px 5px 4px;
 }
-
-
-
 .sentence {
 	font-size: 14px;
 	padding-left: 18px;
 	color: hsl(210, 77%, 46%);
 	cursor: pointer;
 }
-
 .sentence:hover {
 	color: hsl(209, 100%, 32%);
 }
-
 .sentenceFt {
 	font-size: 14px;
 	padding-left: 12px;
 	color: hsl(210, 77%, 46%);
 	cursor: pointer;
 }
-
 .sentenceFt:hover {
 	color: hsl(209, 100%, 32%);
 }
-
 .sentenceThird {
 	font-size: 14px;
 	padding-left: 12px;
 	color: hsl(210, 77%, 46%);
 	cursor: pointer;
 }
-
 .sentenceThird:hover {
 	color: hsl(209, 100%, 32%);
 }
-
+.sentenceTxtt{
+	color:#0C3B6A;
+}
 .yearSet {
 	margin-bottom: 5px;
 	font-size: 13px;
 	color: hsl(210, 8%, 42%);
 }
-
 .secondMainBoxInsideSecond {
-	
 	border-bottom: 1px solid #ddd;
-	
 	padding: 13px;
 }
-
 .secondMainBoxInsideThird {
-	
 	border-bottom: 1px solid #ddd;
-	
 	padding: 13px;
 }
-
 .secondMainBoxInsideFourth {
-	
 	border-bottom: 1px solid #ddd;
-	
 	padding: 13px;
 }
-
 .secondMainBoxInsideFifth {
-	
 	border-bottom: 1px solid #ddd;
-	
 	padding: 13px;
 }
-
 .secondMainBoxInsideSixth {
-	
 	border-bottom: 1px solid #ddd;
-	
 	padding: 13px;
 }
-
 .secondMainBoxInsideSeventh {
-	
 	border-bottom: 1px solid #ddd;
-	
 	padding: 13px;
 }
-
 .secondMainBoxInsideEight {
-	
 	border-bottom: 1px solid #ddd;
-	
 	padding: 13px;
 }
-
 .secondMainBoxInsideNine {
-	
 	border-bottom: 1px solid #ddd;
-	
 	padding: 13px;
 }
-
 .secondMainBoxInsideTen {
-	
 	padding: 13px;
 }
-
-
 .topMetaTxt h3 {
 	font-size: 21px;
 	color: #0c0d0e;
 	font-weight: 400;
-	
 }
-
 .topMetaRight {
-	
 	margin-top: 7px;
 }
-
 .quesPart {
-	display: flex;
-	
 	font-size: 13px;
 	color:#636B74;
 }
-
-
-
 .ansPart {
-	
 	font-size: 13px;
 	color:#636B74;
-
 }
-
-
 .thirdMainBox {
 	border: 1px solid #ddd;
-	
 	border-radius: 5px;
-	
 	margin-top: 5px;
-
 }
-
 .thirdMainBoxInside {
-	
 	border-bottom: 1px solid #ddd;
 	padding: 13px;
-	
 }
-
 .logoNum {
-	
 	gap: 7px;
 }
-
-
 .numSets {
 	border: 1px solid #ddd;
 	border-radius: 3px;
-	padding-left: 5px;
-	padding-right: 6px;
-	padding-top: 3px;
-	padding-bottom: 5px;
+	padding:3px 6px 5px 5px;
 	font-size: 13px;
-
 	color: #0c0d0e;
-	
 }
-
 .secondSentence {
 	cursor: pointer;
 	font-size: 15px;
 	padding-left: 18px;
 	color: hsl(210, 77%, 46%);
 }
-
 .secondSentence:hover {
 	color: hsl(209, 100%, 32%);
 }
-
 .thirdMainBoxInside {
-	
 	border-bottom: 1px solid #ddd;
 	padding: 13px;
-	
 }
-
 .thirdMainBoxInsideLast {
 	padding: 13px;
-	
 }
-
-
 .topNetworkTxt h3 {
 	font-size: 20px;
 	color: #0c0d0e;
 	font-weight: 400;
-	
 }
-
 .viewallNetwork {
-	font-size: 12px;
+	font-size: 13px;
 	color: #636B74;
 	cursor: pointer;
 }
-
 .viewallNetwork:hover {
 	color: hsl(210, 8%, 25%);
 }
-
 .fourthMainBox {
 	border: 1px solid #ddd;
 	border-radius: 5px;
 	margin-top: 5px;
-
 }
-
 .fourthMainBoxInside {
 	border-bottom: 1px solid #ddd;
 	padding: 13px;
 }
-
 .logosNum {
 	gap: 7px;
 }
-
 .numsSets {
 	border: 1px solid #ddd;
 	border-radius: 3px;
-	padding-left: 5px;
-	padding-right: 6px;
-	padding-top: 3px;
-	padding-bottom: 5px;
 	font-size: 13px;
 	color: #0c0d0e;
-	
+	padding:3px 6px 5px 5px;
 }
-
 .secondSentences {
 	cursor: pointer;
 	font-size: 15px;
 	padding-left: 18px;
 	color: hsl(210, 77%, 46%);
 }
-
 .secondSentences:hover {
 	color: hsl(209, 100%, 32%);
 }
-
 .fourthMainBoxInsideLast {
 	padding: 13px;
 	
 }
 .footer {
-	margin-top: 30px;
-	/*width: 100%;
-	height: 328px;*/
 	background-color: hsl(210, 8%, 5%);
-	color:white;
+	color:#BABFC5;
 	
 .footerTitle{
 	cursor:pointer;
@@ -1170,14 +1061,26 @@ body {
 .queSet p{
 	cursor:pointer;
 }
+.queSet p:hover{
+	color:white;
+}
 .prodSet p{
 	cursor:pointer;
+}
+.prodSet p:hover{
+	color:white;
 }
 .compSet p{
 	cursor:pointer;
 }
+.compSet p:hover{
+	color:white;
+}
 .excSet p{
 	cursor:pointer;
+}
+.excSet p:hover{
+	color:white;
 }
 .stackOverflow{
 	font-size:13px;
@@ -1200,15 +1103,12 @@ body {
 .social p{
 	cursor:pointer;
 }
+.social p:hover{
+	color:white;
+}
 .about{
-	
-	font-size:13px;
+	font-size:11px;
 }
-
-.badgeTxtt p {
-	cursor:pointer;
-	font-size:13px;
-}
-.badgeTxtt p:hover{
-	color: hsl(210, 8%, 25%);
+.lastTxt a{
+	color:#BABFC5;
 }
